vendored_parsers/tree-sitter-ada/grammar.js
      compilation: $ => repeat(
         $.compilation_unit,
      ),

      identifier: $ =>
         /[a-zA-Z\u{80}-\u{10FFFF}][0-9a-zA-Z_\u{80}-\u{10FFFF}]*/u,
      numeric_literal: $ => token(
         choice(
            /[0-9][0-9_]*(\.[0-9_]+)?([eE][+-]?[0-9_]+)?/,
            /[0-9]+#[0-9a-fA-F._-]+#([eE][+-]?[0-9_]+)?/,
         )
      ),
      _name_not_function_call: $ => choice(           // RM 4.1
         $.identifier,
         $.gnatprep_identifier,
         $.selected_component,
         $._attribute_reference,
         $.qualified_expression,
         $.target_name,
         $.slice,
         // $.explicit_dereference, // covered by $.selected_component
         $.character_literal,
         $.string_literal, // name of an operator. However, in a number of
                           // places using a string doesn't make sense.
      ),
      _name: $ => choice(           // RM 4.1
         $._name_not_function_call,
         $.function_call,
      ),
      _defining_identifier_list: $ => comma_separated_list_of($.identifier),
      _discrete_subtype_definition: $ => choice(
         $._subtype_indication,
         $.range_g,
      ),
      compilation_unit: $ => choice(
         $.with_clause,
         seq(
            optional(reservedWord('private')),
            $._declarative_item,
         ),
         $._statement,
         $.subunit,
         $.entry_declaration,
      ),
      _declarative_item: $ => choice(
         $._basic_declarative_item,
         $._proper_body,
         $.body_stub,
      ),
      package_declaration: $ => seq(
         $._package_specification,
         ';',
      ),
      _package_specification: $ => seq(
         reservedWord('package'),
         field('name', $._name),
         optional($.aspect_specification),
         reservedWord('is'),
         repeat($._basic_declarative_item_pragma),
         optional(seq(
             reservedWord('private'),
             repeat($._basic_declarative_item_pragma),
         )),
         reservedWord('end'),
         field('endname', optional($._name)),
      ),
      package_body: $ => seq(
         reservedWord('package'),
         reservedWord('body'),
         field('name', $._name),
         optional($.aspect_specification),
         reservedWord('is'),
         optional($.non_empty_declarative_part),
         optional(seq(
            reservedWord('begin'),
            $.handled_sequence_of_statements,
         )),
         reservedWord('end'),
         optional(field('endname', $._name)),
         ';',
      ),
      _subtype_indication: $ => seq(        // ARM 3.2.2
         optional($.null_exclusion),
         field('subtype_mark', $._name_not_function_call),
         optional($._constraint),
      ),
      expression: $ => choice(
         list_of(seq(reservedWord('and'), optional(reservedWord('then'))),
                 $._relation),
         list_of(seq(reservedWord('or'), optional(reservedWord('else'))),
                 $._relation),
         list_of(reservedWord('xor'), $._relation),
      ),
      _relation: $ => choice(                            // RM 4.4
         seq(
            $._simple_expression,
            optional(seq(
               $.relational_operator,
               $._simple_expression,
            )),
         ),
         $.relation_membership,
         $.raise_expression,                           // Added Ada 20x
      ),
      term: $ => seq(
         $._factor,
         repeat(seq(
            $.multiplying_operator,
            $._factor,
         )),
      ),
      _factor: $ => choice(     // ARM 4.4
         $._primary,
         $.factor_power,
         $.factor_abs,
         $.factor_not,
      ),
      actual_parameter_part: $ => seq(    // ARM 6.4
         '(',
         choice(
            comma_separated_list_of($.parameter_association),

            // Those are not in the ARM, but added here for generic
            // instantiations, which get the actual parameter part via $._name
            // and its $.function_call
            // ????
            $._conditional_expression,
            $.quantified_expression,
            $.declare_expression,
         ),
         ')',
      ),

      // RM 6.4, but this one also handles parameters for generic
      // instantiations.
      parameter_association: $ => choice(
         seq(
            $.component_choice_list,
            '=>',
            choice(
               $.expression,
               '<>',
            ),
         ),
         $.expression,
         '<>',
       ),
      _conditional_expression: $ => choice(
         $.if_expression,
         $.case_expression,
      ),
      full_type_declaration: $ => choice(
         seq(
            reservedWord('type'),
            $.identifier,
            optional($.known_discriminant_part),
            reservedWord('is'),
            $._type_definition,
            optional($.aspect_specification),
            ';',
         ),
         $.task_type_declaration,
         $.protected_type_declaration,
      ),
      known_discriminant_part: $ => seq(   // ARM 3.7
         '(',
         $.discriminant_specification_list,
         ')',
      ),
      discriminant_specification_list: $ =>
         prec.right(list_of(';', $.discriminant_specification)),
      discriminant_specification: $ => seq(     // ARM 3.7
         $._defining_identifier_list,
         ':',
         choice(
            seq(
               optional($.null_exclusion),
               field('subtype_mark', $._name),
            ),
            $.access_definition,
         ),
         optional($._assign_value),
      ),
      _type_definition: $ => choice(
         $.enumeration_type_definition,
         $._integer_type_definition,
         $._real_type_definition,
         $.array_type_definition,
         $.record_type_definition,
         $._access_type_definition,
         $.derived_type_definition,
         $.interface_type_definition,
      ),
      _discrete_subtype_definition: $ => choice(
         $._subtype_indication,
         $.range_g,
      ),
      _interface_list: $ =>
         list_of(reservedWord('and'), $._name),
      aspect_association: $ => seq(
         $._aspect_mark,
         optional(seq(
            '=>',
            $._aspect_definition,
         )),
      ),
      _aspect_definition: $ => choice(
         $.expression,
         $.global_aspect_definition,
      ),
      _aspect_mark: $ => seq(   // ARM 13.1.1
         $.identifier,
         optional(seq(
            $.tick,
            reservedWord('Class'),
         )),
      ),
      aspect_mark_list: $ => comma_separated_list_of($.aspect_association),
      aspect_specification: $ => seq(
         reservedWord('with'),
         $.aspect_mark_list,
      ),
      _assign_value: $ => seq(
         ':=',
         $.expression,
      ),
      task_body: $ => seq(
         reservedWord('task'),
         reservedWord('body'),
         $.identifier,
         optional($.aspect_specification),
         reservedWord('is'),
         optional($.non_empty_declarative_part),
         reservedWord('begin'),
         $.handled_sequence_of_statements,
         reservedWord('end'),
         optional($.identifier),
         ';',
      ),
      _declarative_item_pragma: $ => choice(
         $._declarative_item,
         $.pragma_g,
         $.gnatprep_declarative_if_statement,
      ),

      // Although it doesn't add any new character, we keep this rule as an
      // expplicit node in the tree for the sake of queries
      non_empty_declarative_part: $ => repeat1(
         $._declarative_item_pragma,
      ),
      entry_declaration: $ => seq(
         optional($.overriding_indicator),
         reservedWord('entry'),
         field('entry_name', $.identifier),
         optional(seq(
            '(',
            $._discrete_subtype_definition,
            ')',
         )),
         optional($.formal_part),
         optional($.aspect_specification),
         ';',
      ),
      formal_part: $ => seq(    // ARM 6.1
         '(',
         $._parameter_specification_list,
         ')',
      ),
      handled_sequence_of_statements: $ => seq(
         $._sequence_of_statements,
         optional(seq(
            reservedWord('exception'),
            repeat1($.exception_handler),
         )),
      ),
      null_statement: $ => seq(
         reservedWord('null'),
         ';',
      ),
      object_declaration: $ => choice(
         seq(
            field('name', $._defining_identifier_list),
            ':',
            optional(reservedWord('aliased')),
            optional(reservedWord('constant')),
            choice(
               $._subtype_indication,
               $.access_definition,
               $.array_type_definition,
            ),
            optional($._assign_value),
            optional($.aspect_specification),
            ';',
         ),
         $.single_task_declaration,
         $.single_protected_declaration,
      ),
      single_task_declaration: $ => seq(
         reservedWord('task'),
         $.identifier,
         optional($.aspect_specification),
         optional(seq(
            reservedWord('is'),
            optional(seq(
               reservedWord('new'),
               $._interface_list,
               reservedWord('with'),
            )),
            $.task_definition,
         )),
         ';',
      ),
      task_type_declaration: $ => seq(     // RM 9.1
         reservedWord('task'),
         reservedWord('type'),
         $.identifier,
         optional($.known_discriminant_part),
         optional($.aspect_specification),
         optional(seq(
            reservedWord('is'),
            optional(seq(
               reservedWord('new'),
               $._interface_list,
               reservedWord('with'),
            )),
            $.task_definition,
         )),
         ';',
      ),
      entry_declaration: $ => seq(
         optional($.overriding_indicator),
         reservedWord('entry'),
         $.identifier,
         optional(seq(
            '(',
            $._discrete_subtype_definition,
            ')',
         )),
         field('parameter_profile', optional($.formal_part)),
         optional($.aspect_specification),
         ';',
      ),
      _task_item: $ => choice(
         $.entry_declaration,
         $._aspect_clause,
         $.pragma_g,
      ),
      task_definition: $ => seq(   //  RM 9.1
         repeat($._task_item),
         optional(seq(
            reservedWord('private'),
            repeat($._task_item),
         )),
         reservedWord('end'),
         field('endname', optional($.identifier)),
      ),
      parameter_specification: $ => seq(     // ARM 6.1
         $._defining_identifier_list,
         ':',
         choice(
            seq(
               optional(reservedWord('aliased')),
               optional($.non_empty_mode),
               optional($.null_exclusion),
               field('subtype_mark', $._name),
            ),
            $.access_definition,
         ),
         optional($._assign_value),
         optional($.aspect_specification),
      ),
      _parameter_specification_list: $ => list_of(
         ';',
         $.parameter_specification,
      ),
      _sequence_of_statements: $ => prec.left(seq(
         repeat1($._statement),
         repeat($.label),
      )),
      _statement: $ => seq(
         repeat($.label),
         choice(
            $._simple_statement,
            $._compound_statement,
         ),
      ),
      entry_call_alternative: $ => seq(
         $.procedure_call_statement,
         optional($._sequence_of_statements),
      ),
      asynchronous_select: $ => seq(
         reservedWord('select'),
         $.triggering_alternative,
         reservedWord('then'),
         reservedWord('abort'),
         field('abortable_part', $._sequence_of_statements),
         reservedWord('end'),
         reservedWord('select'),
         ';',
      ),
      triggering_alternative: $ => choice(
         seq(
            $.procedure_call_statement,
            optional($._sequence_of_statements),
         ),
         seq(
            $._delay_statement,
            optional($._sequence_of_statements),
         ),
      ),
      conditional_entry_call: $ => seq(
         reservedWord('select'),
         $.entry_call_alternative,
         reservedWord('else'),
         $._sequence_of_statements,
         reservedWord('end'),
         reservedWord('select'),
         ';',
      ),
      delay_alternative: $ => seq(
         $._delay_statement,
         optional($._sequence_of_statements)
      ),
      timed_entry_call: $ => seq(
         reservedWord('select'),
         $.entry_call_alternative,
         reservedWord('or'),
         $.delay_alternative,
         reservedWord('end'),
         reservedWord('select'),
         ';',
      ),
      select_alternative: $ => choice(    // ARM 9.7.1
         $.accept_alternative,
         $.delay_alternative,
         $.terminate_alternative,
      ),
      accept_alternative: $ => seq(  // ARM 9.7.1
         $.accept_statement,
         optional($._sequence_of_statements),
      ),
      delay_alternative: $ => seq(   // ARM 9.7.1
         $._delay_statement,
         optional($._sequence_of_statements),
      ),
      terminate_alternative: $ => seq(  // ARM 9.7.1
         reservedWord("terminate"),
         ';',
      ),
      selective_accept: $ => seq(    // ARM 9.7.1
         reservedWord('select'),
         list_of(reservedWord('or'), seq(
            optional($.guard),
            $.select_alternative,
         )),
         optional(seq(
            reservedWord('else'),
            $._sequence_of_statements,
         )),
         reservedWord('end'),
         reservedWord('select'),
         ';',
      ),
      accept_statement: $ => seq(   //  ARM 9.5.2
         reservedWord('accept'),
         field('entry_direct_name', $.identifier),
         optional(seq(
            '(',
            field('entry_index', $.expression),
            ')',
         )),
         optional(field('parameter_profile', $.formal_part)),
         optional(seq(
            reservedWord('do'),
            $.handled_sequence_of_statements,
            reservedWord('end'),
            optional(field('entry_identifier', $.identifier)),
         )),
         ';',
      ),
      _delay_statement: $ => choice(
         $.delay_until_statement,
         $.delay_relative_statement,
      ),
      delay_relative_statement: $ => seq(
         reservedWord('delay'),
         $.expression,
         ';',
      ),
      procedure_call_statement: $ => choice(    // ARM 6.4
         seq(
            field('name', $._name_not_function_call),
            ';',
         ),
         seq(
            field('name', $._name),   // includes function_call
            $.actual_parameter_part,
            ';',
         ),
      ),
